--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0",
@@ -33,6 +34,13 @@
     "moment": "^2.24.0",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-css-variables": "^0.13.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.2",
+    "postcss-preset-env": "^6.6.0",
+    "postcss-simple-vars": "^5.0.2",
+    "postcss-will-change": "^3.0.0",
     "regenerator-runtime": "^0.13.2",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.35.2",
