--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
   "dependencies": {
     "core-js": "^3.1.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.3.2"
   },
   "jest": {
     "collectCoverageFrom": [
