--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint src/**/*.js",
     "analyze": "webpack --mode=production --analyze",
     "build:dev": "webpack --mode=development -w",
     "build:prod": "webpack --mode=production",
     "build": "run-s build:prod",
     "server": "webpack-dev-server",
     "dev": "run-p build:dev server",
-    "test": "jest --verbose --runInBand --no-cache --config"
+    "test": "jest --verbose --runInBand --no-cache --config",
+    "lint": "tslint -c tslint.json --project ./ 'src/**/*/.ts*'"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,11 @@
     "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.1.1",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/styled-components": "^4.1.16",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
@@ -28,7 +33,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "^6.0.1",
+    "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-react": "^7.14.2",
@@ -49,7 +54,14 @@
     "postcss-will-change": "^3.0.0",
     "regenerator-runtime": "^0.13.2",
     "sinon": "^7.3.2",
+    "source-map-loader": "^0.2.4",
+    "stylelint": "^10.1.0",
+    "stylelint-config-standard": "^18.3.0",
     "terser-webpack-plugin": "^1.3.0",
+    "ts-loader": "^6.0.4",
+    "tslint": "^5.18.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.5.3",
     "webpack": "^4.35.2",
     "webpack-build-notifier": "^1.0.3",
     "webpack-bundle-analyzer": "^3.3.2",
