organized webpack config

--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "analyze": "webpack --mode=production --analyze",
-    "build:dev": "webpack --mode=development -w",
-    "build:prod": "webpack --mode=production",
-    "build": "run-s build:prod",
+    "analyze": "webpack --config ./webpack.config.prod.js --analyze",
+    "build:dev": "webpack --config ./webpack.config.dev.js -w",
+    "build:prod": "webpack --config ./webpack.config.prod.js",
+    "build": "npm-run-all -s build:prod",
     "server": "webpack-dev-server",
-    "dev": "run-p build:dev server",
+    "dev": "npm-run-all -p build:dev -s server",
     "test": "jest --verbose --runInBand --no-cache --config",
-    "lint": "tslint -c tslint.json --project ./ 'src/**/*/.ts*'"
+    "lint": "tslint -c ./tslint.json --project ./ 'src/**/*/.ts*'"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "^4.1.16",
-    "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
@@ -33,10 +34,6 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-react": "^7.14.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -61,12 +58,14 @@
     "ts-loader": "^6.0.4",
     "tslint": "^5.18.0",
     "tslint-config-standard": "^8.0.1",
+    "tslint-loader": "^3.5.4",
     "typescript": "^3.5.3",
     "webpack": "^4.35.2",
     "webpack-build-notifier": "^1.0.3",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "core-js": "^3.1.4",
