--- a/.babelrc
+++ b/.babelrc
@@ -10,9 +10,11 @@
         "corejs": 3
       }
     ],
+    "@babel/preset-typescript",
     "@babel/preset-react"
   ],
-  "env": {
-
-  }
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
 }
