--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "$npm_execpath --silent run checkyarn",
+    "checkyarn": "echo \"$npm_execpath\" | grep -q \"yarn\\.js$\" || (echo '⚠️  Use yarn not npm! ⚠️ ' && echo && exit 1)",
     "analyze": "webpack --config ./webpack.config.prod.js --analyze",
     "build:dev": "webpack --config ./webpack.config.dev.js -w",
     "build:prod": "webpack --config ./webpack.config.prod.js",
