--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -59,6 +59,7 @@
     "regenerator-runtime": "^0.13.2",
     "sinon": "^7.3.2",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "terser-webpack-plugin": "^1.3.0",
